--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <title>RobloxCheatz - Exploit Status Tracker</title>
   <meta name="description" content="Track Roblox exploit statuses in real-time. View UNC, SUNC percentages, versions, and more.">
   <meta name="robots" content="noindex, nofollow">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/jpeg" href="/logo.jpg">
+  <link rel="apple-touch-icon" href="/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
