--- a/public/terms.html
+++ b/public/terms.html
@@ -39,7 +39,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="/information.html" class="cursor-target">
+                  <a href="/information" class="cursor-target">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                       <circle cx="12" cy="12" r="10"/>
                       <path d="M12 16v-4"/>
